--- a/assets/style.css
+++ b/assets/style.css
@@ -22,14 +22,6 @@ a:active {
     color: #00f;
 }
 
-h1 {
-    font-size: 1.4rem;
-}
-
-h2 {
-    font-size: 1.2rem;
-}
-
 p {
     margin: 0 0 1rem 0;
     line-height: 1.5;
@@ -38,7 +30,7 @@ p {
 .content {
     max-width: 50rem;
     margin: 0 auto;
-    padding: 0;
+    padding: 0 1rem;
 }
 
 /* header */
@@ -95,4 +87,22 @@ header a:hover {
 
 .family {
     font-weight: normal;
+}
+
+h1 .japanese {
+    font-weight: normal;
+}
+
+ul.work {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    & li {
+        margin-bottom: 1rem;
+
+        & .years {
+            color: #999;
+        }
+    }
 }
