--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 /* http://clrs.cc/ */
 
 body {
-    background: #eee;
+    background: #fff;
     color: #111;
     font-family: 'Helvetica Neue', sans-serif;
 }
@@ -18,11 +18,6 @@ a:hover {
 }
 a:active {
     color: #00f;
-}
-
-p {
-    margin: 0 0 1rem 0;
-    line-height: 1.5;
 }
 
 .content {
