--- a/v2/themes/v2/assets/v2.css
+++ b/v2/themes/v2/assets/v2.css
@@ -35,6 +35,27 @@ code {
     vertical-align: text-bottom;
 }
 
+header ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+header li {
+    margin-right: 1rem;
+    font-weight: bold;
+}
+
+header a {
+    color: #000;
+    text-decoration: none;
+}
+
+header li.me {
+    margin-left: auto;
+}
+
 ul.work {
     margin: 0;
     padding: 0;
@@ -42,7 +63,7 @@ ul.work {
 
 }
 
-li {
+ul.work li {
     margin-bottom: 1rem;
 }
 
