--- a/v2/themes/v2/layouts/partials/header.html
+++ b/v2/themes/v2/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header>
     <ul>
-        <li class="logo"><a href="8-p.info">8-p.info</a></li>
+        <li class="logo"><a href="/">8-p.info</a></li>
         <li class="me"><a href="/me/">Kazuyoshi Kato</a></li>
         <li><a href="https://blog.8-p.info/">Blog</a></li>
     </ul>
