--- a/v2/themes/v2/assets/v2.css
+++ b/v2/themes/v2/assets/v2.css
@@ -35,11 +35,18 @@ code {
     vertical-align: text-bottom;
 }
 
+header {
+    margin: 0.5rem 0 2rem 0;
+}
+
 header ul {
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
+
+    font-size: 0.9rem;
+    line-height: 2rem;
 }
 
 header li {
@@ -52,8 +59,17 @@ header a {
     text-decoration: none;
 }
 
+header li.logo {
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+
 header li.me {
     margin-left: auto;
+}
+
+h1 span.ja {
+    font-weight: normal;
 }
 
 ul.work {
