--- a/v2/themes/v2/layouts/partials/header.html
+++ b/v2/themes/v2/layouts/partials/header.html
@@ -3,5 +3,6 @@
         <li class="logo"><a href="/">8-p.info</a></li>
         <li class="me"><a href="/me/">Kazuyoshi Kato</a></li>
         <li><a href="https://blog.8-p.info/">Blog</a></li>
+        <li><a href="/faq/">FAQ</a></li>
     </ul>
 </header>
