--- a/v2/themes/v2/layouts/partials/head.html
+++ b/v2/themes/v2/layouts/partials/head.html
@@ -1,5 +1,6 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
+<link href="https://github.com/kzys" rel="me"/>
 {{ $style := resources.Get "v2.css" | resources.Minify | resources.Fingerprint }}
 <link rel="stylesheet" href="{{ $style.Permalink }}">
 <title>{{ .Title }}</title>
