Add a T-shaped menu

--- a/v2/themes/v2/layouts/partials/footer.html
+++ b/v2/themes/v2/layouts/partials/footer.html
@@ -1,1 +1,2 @@
-<!-- footer -->
+{{ $script := resources.Get "v2.js" | resources.Minify | resources.Fingerprint }}
+<script src="{{ $script.Permalink }}"></script>
