--- a/v2/themes/v2/assets/v2.css
+++ b/v2/themes/v2/assets/v2.css
@@ -1,22 +1,23 @@
 body {
     margin: 0 auto;
-    max-width: 60em;
+    max-width: 50em;
 
-    font-family: "Helvetica", "Arial", sans-serif;
+    font-family: "Helvetica Neue", "Arial", sans-serif;
 
-    line-height: 2;
-    padding: 1em;
+    line-height: 1.8;
+    padding: 0 .5em;
 
     color: #333;
 }
 
 h1 {
-    font-size: 120%;
+    font-size: 200%;
+    margin: .5rem 0;
+    padding: 0;
 }
 
 h2 {
-    margin-top: 1em;
-    padding-top: 1em;
+    margin-top: 1rem 0 0 0;
 }
 
 h1,
@@ -35,28 +36,40 @@ code {
     vertical-align: text-bottom;
 }
 
-header {
-    margin: 0.5rem 0 2rem 0;
+nav {
+    margin: .5rem;
+    font-size: 90%;
+    line-height: 1;
+    float: right;
 }
 
-header ul {
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav > ul {
     display: flex;
+    justify-content: flex-end;
     list-style: none;
     margin: 0;
     padding: 0;
-
-    font-size: 0.9rem;
-    line-height: 2rem;
 }
 
-header li {
-    margin-right: 1rem;
-    font-weight: bold;
-}
-
-header a {
+nav a {
     color: #000;
     text-decoration: none;
+    display: block;
+    padding: 0.5rem;
+    background: #ddd;
+}
+
+a.here {
+    background: #fc0;
+}
+
+nav a:hover {
+    background: #eee;
 }
 
 header li.logo {
