Attention gig economy

--- a/v2/themes/v2/assets/v2.css
+++ b/v2/themes/v2/assets/v2.css
@@ -126,3 +126,12 @@ ul.work .ja {
     margin-right: 1rem;
     color: #000;
 }
+
+blockquote {
+    margin: 0 0 0 1rem;
+}
+
+hr {
+    border: 0;
+    border-top: 1px solid #000;
+}
