--- a/v2/themes/v2/layouts/partials/header.html
+++ b/v2/themes/v2/layouts/partials/header.html
@@ -1,13 +1,1 @@
-<nav>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/me/">Me</a></li>
-        <li><a href="https://blog.8-p.info/">Blog</a>
-            <ul>
-                <li><a href="https://blog.8-p.info/en/">English</a>
-                <li><a href="https://blog.8-p.info/ja/">Japanese</a>
-            </ul>
-        </li>
-        <li><a href="https://links.8-p.info/">Links</a></li>
-    </ul>
-</nav>
+<!-- header -->
