--- a/v2/themes/v2/layouts/_default/baseof.html
+++ b/v2/themes/v2/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="{{ .File.TranslationBaseName }}">
     {{- partial "head.html" . -}}
     <body>
         {{- partial "header.html" . -}}
