--- a/v2/themes/v2/layouts/partials/footer.html
+++ b/v2/themes/v2/layouts/partials/footer.html
@@ -1,2 +1,3 @@
 {{ $script := resources.Get "v2.js" | resources.Minify | resources.Fingerprint }}
+{{ $script := resources.Get "bundle.js" | resources.Minify | resources.Fingerprint }}
 <script src="{{ $script.Permalink }}"></script>
