--- a/v2/themes/v2/assets/v2.css
+++ b/v2/themes/v2/assets/v2.css
@@ -26,6 +26,7 @@ h1 {
     font-size: 200%;
     margin: .5rem 0;
     padding: 0;
+    line-height: 1.2;
 }
 
 h2 {
@@ -54,7 +55,7 @@ ul.work p {
     padding: 0;
 }
 
-ul.work .ja {
+.ja {
     color: #666;
     font-size: 90%;
 }
@@ -78,4 +79,9 @@ ul.work .ja {
     text-decoration: none;
     margin-right: 1rem;
     color: #000;
+}
+
+#clocks {
+    display: flex;
+    line-height: 1;
 }
