--- a/v2/themes/v2/assets/v2.css
+++ b/v2/themes/v2/assets/v2.css
@@ -29,6 +29,11 @@ h1 {
     line-height: 1.2;
 }
 
+h1 a {
+    text-decoration: none;
+    color: #333 !important;
+}
+
 h2 {
     margin-top: 1rem 0 0 0;
 }
