--- a/v2/themes/v2/assets/v2.css
+++ b/v2/themes/v2/assets/v2.css
@@ -8,7 +8,7 @@ body {
     line-height: 1.8;
 
     color: #333;
-    background: #f0f0f0;
+    background: #fff;
 }
 
 a {
@@ -23,7 +23,7 @@ ul {
 }
 
 h1 {
-    font-size: 200%;
+    font-size: 150%;
     margin: .5rem 0;
     padding: 0;
     line-height: 1.2;
@@ -35,7 +35,11 @@ h1 a {
 }
 
 h2 {
+    font-size: 110%;
     margin-top: 1rem 0 0 0;
+}
+h1 div.ja {
+    font-weight: normal;
 }
 
 h1,
