Have a footer again

--- a/v2/themes/v2/assets/v2.css
+++ b/v2/themes/v2/assets/v2.css
@@ -1,7 +1,7 @@
 body {
     margin: 0 auto;
     padding: 0 1rem;
-    max-width: 50rem;
+    max-width: 60rem;
 
     font-family: "Helvetica Neue", "Arial", sans-serif;
 
@@ -108,3 +108,31 @@ h3 {
 
 h3 div.location {
 }
+
+footer {
+    font-size: 90%;
+    padding: 1rem 0;
+    margin-top: 1rem;
+    border-top: 1px solid #000;
+    display: flex;
+}
+
+footer a {
+    color: #000 !important;
+    text-decoration: none;
+    display: block;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+footer a.home {
+    display: inline;
+    font-weight: bold;
+}
+
+footer a.home, footer .group {
+    margin-right: 2rem;
+}
+
