Make the maze generator's thumbnail smaller

--- a/v4/style.css
+++ b/v4/style.css
@@ -65,6 +65,10 @@ h4 {
     font-weight: normal;
 }
 
+.thumbnail {
+    width: 10rem;
+}
+
 @media (min-width: 50rem) {
     h4 {
         display: flex;
