--- a/v4/src/style.css
+++ b/v4/src/style.css
@@ -16,13 +16,29 @@ main {
 }
 
 @media (min-width: 80em) {
-    main.flex {
+    #index section {
         display: flex;
     }
 }
 
 main.flex .column {
     flex-basis: 50%;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+header h1 {
+    font-size: 2rem;
+    padding: 0;
+    margin: 0;
+}
+header a {
+    font-size: .9rem;
+    line-height: 2rem;
+    display: block;
 }
 
 /* me */
