--- a/v4/src/style.css
+++ b/v4/src/style.css
@@ -25,6 +25,13 @@ main.flex .column {
     flex-basis: 50%;
 }
 
+h2 {
+    margin: 1rem 0;
+    padding: 0;
+    font-size: 1.5rem;
+    line-height: 1;
+}
+
 header {
     display: flex;
     align-items: center;
@@ -60,6 +67,7 @@ main.markdown, main.narrow {
 
 p {
     line-height: 1.5;
+    margin: 1rem 0;
 }
 
 table.name {
