Support per-file layout

--- a/v4/layout/wrapper.html
+++ b/v4/layout/wrapper.html
@@ -6,7 +6,7 @@
     <title>{{ .Title }}</title>
     <link rel="stylesheet" href="{{ .Root }}style.css"/>
   </head>
-  <body>
+  <body class="{{ .BodyClass }}">
     {{ .Body }}
     <script src="{{ .Root }}output.js"></script>
   </body>
